--- a/LearnMoto/app/src/main/res/layout/activity_alphabet.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_alphabet.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="25sp"
-            android:text="Pronounce Letters"
+            android:text="Pronounce the word"
             android:fontFamily="@font/aloevera"
             android:textColor="@color/black"/>
 
