--- a/LearnMoto/app/src/main/res/layout/activity_kinder_filipino_read.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_kinder_filipino_read.xml
@@ -56,7 +56,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="PDF"
+                            android:text="Mga Aralin"
                             android:layout_margin="5dp"
                             android:textColor="@color/fontColor"
                             android:fontFamily="@font/aloevera"
