--- a/LearnMoto/app/src/main/res/layout/activity_preparatory_math_read.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_preparatory_math_read.xml
@@ -55,7 +55,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="PDF"
+                            android:text="Lessons"
                             android:layout_margin="5dp"
                             android:textColor="@color/fontColor"
                             android:fontFamily="@font/aloevera"
