--- a/LearnMoto/app/src/main/res/layout/activity_kinder_english.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_kinder_english.xml
@@ -56,7 +56,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="PDF"
+                            android:text="Lessons"
                             android:layout_margin="5dp"
                             android:textColor="@color/fontColor"
                             android:fontFamily="@font/aloevera"
@@ -85,6 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:orientation="vertical"
+                    android:visibility="gone"
                     android:padding="10dp">
 
                     <TextView
@@ -167,6 +168,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:orientation="vertical"
+                    android:visibility="gone"
                     android:padding="10dp">
 
                     <TextView
@@ -248,6 +250,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:orientation="vertical"
+                    android:visibility="gone"
                     android:padding="10dp">
 
                     <TextView
