--- a/LearnMoto/app/src/main/res/layout/activity_pronounce_alphabet.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_pronounce_alphabet.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="25sp"
-            android:text="Alphabet Letters"
+            android:text="Alphabet"
             android:fontFamily="@font/aloevera"
             android:textColor="@color/black"/>
 
@@ -34,11 +34,11 @@
     <GridView
         android:background="@color/transparent1"
         android:id="@+id/grid"
-        android:numColumns="4"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="12dp"
+        android:numColumns="3"
+        android:verticalSpacing="6dp"
+        android:horizontalSpacing="6dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
