--- a/LearnMoto/app/src/main/res/layout/activity_delete_video.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_delete_video.xml
@@ -52,6 +52,7 @@
         android:layout_height="30dp"
         android:layout_marginHorizontal="10dp"
         android:textSize="18sp"
+        android:textAlignment="center"
         android:background="@drawable/background_edittext"
         android:id="@+id/DisplayVideoName"/>
 
@@ -62,6 +63,7 @@
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="15dp"
         android:text="Remove Video"/>
+
 
 
 </LinearLayout>
