--- a/LearnMoto/app/src/main/res/layout/activity_preparatory_math_quiz.xml
+++ b/LearnMoto/app/src/main/res/layout/activity_preparatory_math_quiz.xml
@@ -97,6 +97,16 @@
                         android:drawableEnd="@drawable/ic_reading"
                         android:layout_gravity="center"/>
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Activity"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:onClick="mathActivity"
+                        android:drawableEnd="@drawable/ic_reading"
+                        android:layout_gravity="center"/>
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
